Try running scheduled tests on sw-full-kat branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -408,6 +408,7 @@ workflows:
       and:
         - equal: [ scheduled_pipeline, << pipeline.trigger_source >> ]
         - equal: [ "NIST KATs", << pipeline.schedule.name >> ]
+        - equal: [ sw-full-kat, << pipeline.git.branch >> ]
     jobs:
       - linux_oqs:
           <<: *require_buildcheck
