See what macros are defined on the CircleCI ARM machine

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -307,6 +307,18 @@ jobs:
                  --data '{"event_type":"liboqs-upstream-trigger"}' \
                  https://api.github.com/repos/open-quantum-safe/liboqs-python/dispatches | tee curl_out \
             && grep -q "204" curl_out
+  macro-check:
+    machine:
+      image: ubuntu-2004:202101-01
+    resource_class: arm.medium
+    steps:
+      - checkout
+      # It seems the machine doesn't contain all preprequisites, and we don't have permission to add them explicitly, 
+      # so we can only run in a prepared ARM64 CI image
+      - run:
+          name: Print defined ARM macros
+          no_output_timeout: 1h
+          command: gcc macros.c -o macros && ./macros
 
 workflows:
   version: 2.1
@@ -412,7 +424,4 @@ workflows:
       and:
         - equal: [ sw-full-kat, << pipeline.git.branch >> ]
     jobs:
-      - arm_machine:
-          name: nistkat-arm-neon
-          CMAKE_ARGS: -DOQS_DIST_BUILD=OFF
-          PYTEST_ARGS: --numprocesses=auto --maxprocesses=10 -k test_kat_all
+      - macro-check
